--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,11 @@
   <title>Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
+
 <body class="page">
   <header class="header">
-    <img class="header__logo" src="./images/logo.svg">
+    <img class="header__logo" src="./images/logo.svg" alt="Проект Место">
   </header>
-
   <div class="popup">
     <div class="popup__container">
       <button class="popup__close">
@@ -27,9 +28,6 @@
       </form>
     </div>
   </div>
-
-
-  
   <main class="content">
     <section class="profile">
       <div class="profile__data">
@@ -48,51 +46,52 @@
     </section>
     <div class="elements">
       <div class="element">
-        <img class="element__photo" src="./images/karachaevsk.jpg">
+        <img class="element__photo" src="./images/karachaevsk.jpg" alt="Строение на фоне гор">
         <div class="element__info">
           <h3 class="element__name">Карачаевск</h3>
           <div class="like"></div>
         </div>
       </div>
       <div class="element">
-        <img class="element__photo" src="./images/elbrus.jpg">
+        <img class="element__photo" src="./images/elbrus.jpg" alt="Эльбрус на рассвете">
         <div class="element__info">
           <h3 class="element__name">Гора Эльбрус</h3>
           <div class="like"></div>
         </div>
       </div>
       <div class="element">
-        <img class="element__photo" src="./images/dombai.jpg">
+        <img class="element__photo" src="./images/dombai.jpg" alt="Лес на фоне гор">
         <div class="element__info">
           <h3 class="element__name">Домбай</h3>
           <div class="like"></div>
         </div>
       </div>
       <div class="element">
-        <img class="element__photo" src="./images/elbrus.jpg">
+        <img class="element__photo" src="./images/elbrus.jpg" alt="Эльбрус на рассвете">
         <div class="element__info">
           <h3 class="element__name">Гора Эльбрус</h3>
           <div class="like"></div>
         </div>
       </div>
       <div class="element">
-        <img class="element__photo" src="./images/dombai.jpg">
+        <img class="element__photo" src="./images/dombai.jpg" alt="Лес на фоне гор">
         <div class="element__info">
           <h3 class="element__name">Домбай</h3>
           <div class="like"></div>
         </div>
       </div>
       <div class="element">
-        <img class="element__photo" src="./images/karachaevsk.jpg">
+        <img class="element__photo" src="./images/karachaevsk.jpg" alt="Строение на фоне гор">
         <div class="element__info">
           <h3 class="element__name">Карачаево-Черкессия</h3>
           <div class="like"></div>
         </div>
-      </div>     
+      </div>
     </div>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&copy;2022 Mesto Russia</p>
   </footer>
 </body>
+
 </html>
