--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mesto</title>
+  <title>Project Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -45,13 +45,13 @@
       </button>
     </section>
     <div class="elements">
-      <div class="element">
+      <article class="element">
         <img class="element__photo" src="./images/karachaevsk.jpg" alt="Строение на фоне гор">
         <div class="element__info">
           <h3 class="element__name">Карачаевск</h3>
           <div class="like"></div>
         </div>
-      </div>
+      </article>
       <div class="element">
         <img class="element__photo" src="./images/elbrus.jpg" alt="Эльбрус на рассвете">
         <div class="element__info">
@@ -59,34 +59,34 @@
           <div class="like"></div>
         </div>
       </div>
-      <div class="element">
+      <article class="element">
         <img class="element__photo" src="./images/dombai.jpg" alt="Лес на фоне гор">
         <div class="element__info">
           <h3 class="element__name">Домбай</h3>
           <div class="like"></div>
         </div>
-      </div>
-      <div class="element">
+      </article>
+      <article class="element">
         <img class="element__photo" src="./images/elbrus.jpg" alt="Эльбрус на рассвете">
         <div class="element__info">
           <h3 class="element__name">Гора Эльбрус</h3>
           <div class="like"></div>
         </div>
-      </div>
-      <div class="element">
+      </article>
+      <article class="element">
         <img class="element__photo" src="./images/dombai.jpg" alt="Лес на фоне гор">
         <div class="element__info">
           <h3 class="element__name">Домбай</h3>
           <div class="like"></div>
         </div>
-      </div>
-      <div class="element">
+      </article>
+      <article class="element">
         <img class="element__photo" src="./images/karachaevsk.jpg" alt="Строение на фоне гор">
         <div class="element__info">
           <h3 class="element__name">Карачаево-Черкессия</h3>
           <div class="like"></div>
         </div>
-      </div>
+      </article>
     </div>
   </main>
   <footer class="footer">
