--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   </header>
   <div class="popup">
     <div class="popup__container">
-      <button class="popup__close">
-        <img src="/images/close.svg" class="popup__close-icon" alt="Закрыть">
+      <button type="button" class="popup__close">
+        <img src="./images/close.svg" class="popup__close-icon" alt="Закрыть">
       </button>
-      <form class="profile-edit">
+      <form class="profile-edit" name="profile-data">
         <fieldset class="profile-edit__personal">
           <h2 class="profile-edit__title">Редактировать профиль</h2>
           <input type="text" class="profile-edit__name popup__item" name="name" value="Жак-Ив Кусто">
           <input type="text" class="profile-edit__about popup__item" name="about" value="Исследователь океана">
-          <button class="save">Сохранить</button>
+          <button type="button" class="profile-edit__save">Сохранить</button>
         </fieldset>
       </form>
     </div>
@@ -33,61 +33,63 @@
       <div class="profile__data">
         <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар Жака Ив Кусто">
         <div class="profile__info">
-          <h2 class="profile__name">Жак-Ив Кусто</h2>
-          <button class="edit-button">
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <button type="button" class="profile__edit-button">
             <img src="./images/pencil.svg" alt="Карандаш">
           </button>
           <p class="profile__about">Исследователь океана</p>
         </div>
       </div>
-      <button class="add-button">
+      <button type="button" class="profile__add-button">
         <img src="./images/plus.svg" alt="Плюс">
       </button>
     </section>
-    <div class="elements">
-      <article class="element">
-        <img class="element__photo" src="./images/karachaevsk.jpg" alt="Строение на фоне гор">
-        <div class="element__info">
-          <h3 class="element__name">Карачаевск</h3>
-          <div class="like"></div>
+    <section class="elements">
+      <ul class="elements__list">
+        <li class="element">
+          <img class="element__photo" src="./images/karachaevsk.jpg" alt="Строение на фоне гор">
+          <div class="element__info">
+            <h3 class="element__name">Карачаевск</h3>
+            <button type="button" class="element__like"></button>
+          </div>
+        </li>
+        <div class="element">
+          <img class="element__photo" src="./images/elbrus.jpg" alt="Эльбрус на рассвете">
+          <div class="element__info">
+            <h3 class="element__name">Гора Эльбрус</h3>
+            <button type="button" class="element__like"></button>
+          </div>
         </div>
-      </article>
-      <div class="element">
-        <img class="element__photo" src="./images/elbrus.jpg" alt="Эльбрус на рассвете">
-        <div class="element__info">
-          <h3 class="element__name">Гора Эльбрус</h3>
-          <div class="like"></div>
-        </div>
-      </div>
-      <article class="element">
-        <img class="element__photo" src="./images/dombai.jpg" alt="Лес на фоне гор">
-        <div class="element__info">
-          <h3 class="element__name">Домбай</h3>
-          <div class="like"></div>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__photo" src="./images/elbrus.jpg" alt="Эльбрус на рассвете">
-        <div class="element__info">
-          <h3 class="element__name">Гора Эльбрус</h3>
-          <div class="like"></div>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__photo" src="./images/dombai.jpg" alt="Лес на фоне гор">
-        <div class="element__info">
-          <h3 class="element__name">Домбай</h3>
-          <div class="like"></div>
-        </div>
-      </article>
-      <article class="element">
-        <img class="element__photo" src="./images/karachaevsk.jpg" alt="Строение на фоне гор">
-        <div class="element__info">
-          <h3 class="element__name">Карачаево-Черкессия</h3>
-          <div class="like"></div>
-        </div>
-      </article>
-    </div>
+        <li class="element">
+          <img class="element__photo" src="./images/dombai.jpg" alt="Лес на фоне гор">
+          <div class="element__info">
+            <h3 class="element__name">Домбай</h3>
+            <button type="button" class="element__like"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img class="element__photo" src="./images/elbrus.jpg" alt="Эльбрус на рассвете">
+          <div class="element__info">
+            <h3 class="element__name">Гора Эльбрус</h3>
+            <button type="button" class="element__like"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img class="element__photo" src="./images/dombai.jpg" alt="Лес на фоне гор">
+          <div class="element__info">
+            <h3 class="element__name">Домбай</h3>
+            <button type="button" class="element__like"></button>
+          </div>
+        </li>
+        <li class="element">
+          <img class="element__photo" src="./images/karachaevsk.jpg" alt="Строение на фоне гор">
+          <div class="element__info">
+            <h3 class="element__name">Карачаево-Черкессия</h3>
+            <button type="button" class="element__like"></button>
+          </div>
+        </li>
+      </ul>
+    </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&copy;2022 Mesto Russia</p>
