--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h2 class="profile-edit__title">Редактировать профиль</h2>
           <input type="text" class="profile-edit__name popup__item" name="name" value="Жак-Ив Кусто">
           <input type="text" class="profile-edit__about popup__item" name="about" value="Исследователь океана">
-          <button type="button" class="profile-edit__save">Сохранить</button>
+          <button type="submit" class="profile-edit__save">Сохранить</button>
         </fieldset>
       </form>
     </div>
@@ -53,13 +53,13 @@
             <button type="button" class="element__like"></button>
           </div>
         </li>
-        <div class="element">
+        <li class="element">
           <img class="element__photo" src="./images/elbrus.jpg" alt="Эльбрус на рассвете">
           <div class="element__info">
             <h3 class="element__name">Гора Эльбрус</h3>
             <button type="button" class="element__like"></button>
           </div>
-        </div>
+        </li>
         <li class="element">
           <img class="element__photo" src="./images/dombai.jpg" alt="Лес на фоне гор">
           <div class="element__info">
