--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project Mesto</title>
+  <title>Mesto Project</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -13,21 +13,51 @@
   <header class="header">
     <img class="header__logo" src="./images/logo.svg" alt="Проект Место">
   </header>
-  <div class="popup">
+
+  <div class="popup popup-profile">
     <div class="popup__container">
-      <button type="button" class="popup__close">
-        <img src="./images/close.svg" class="popup__close-icon" alt="Закрыть">
-      </button>
-      <form class="profile-edit" name="profile-data">
-        <fieldset class="profile-edit__personal">
-          <h2 class="profile-edit__title">Редактировать профиль</h2>
-          <input type="text" class="profile-edit__name popup__item" name="name" value="Жак-Ив Кусто">
-          <input type="text" class="profile-edit__about popup__item" name="about" value="Исследователь океана">
-          <button type="submit" class="profile-edit__save">Сохранить</button>
+      <form class="popup__form profile-edit" name="profile-data">
+        <fieldset class="popup__fieldset profile-edit__personal">
+          <button type="button" class="popup__close">
+            <img src="./images/close.svg" class="popup__close-icon" alt="Закрыть">
+          </button>
+          <h2 class="popup__title profile-edit__title">Редактировать профиль</h2>
+          <input type="text" class="profile-edit__name popup__item" name="name" placeholder="Жак-Ив Кусто" autocomplete="off">
+          <input type="text" class="profile-edit__about popup__item" name="about" placeholder="Исследователь океана" autocomplete="off">
+          <button type="submit" class="popup__save profile-edit__save">Сохранить</button>
         </fieldset>
       </form>
     </div>
   </div>
+
+  <div class="popup popup-element">
+    <div class="popup__container">
+      <form class="popup__form card-add" name="element-data">
+        <fieldset class="popup__fieldset card-add__data">
+          <button type="button" class="popup__close">
+            <img src="./images/close.svg" class="popup__close-icon" alt="Закрыть">
+          </button>
+          <h2 class="popup__title profile-edit__title">Новое место</h2>
+          <input type="text" class="popup__item card-add__name" name="name" placeholder="Название">
+          <input type="text" class="popup__item card-add__link" name="link" placeholder="Ссылка на картинку">
+          <button type="submit" class="popup__save card-add__save">Создать</button>
+        </fieldset>
+      </form>
+    </div>
+  </div>
+
+  <div class="popup popup-image">
+    <div class="popup-image__container">
+      <figure class="popup-image__figure">
+        <button type="button" class="popup__close">
+          <img src="./images/close.svg" class="popup__close-icon" alt="Закрыть">
+        </button>
+        <img class="popup-image__image" src="">
+        <figcaption class="popup-image__caption"></figcaption>
+      </figure>
+    </div>
+  </div>
+
   <main class="content">
     <section class="profile">
       <div class="profile__data">
@@ -46,54 +76,25 @@
     </section>
     <section class="elements">
       <ul class="elements__list">
-        <li class="element">
-          <img class="element__photo" src="./images/karachaevsk.jpg" alt="Строение на фоне гор">
-          <div class="element__info">
-            <h3 class="element__name">Карачаевск</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img class="element__photo" src="./images/elbrus.jpg" alt="Эльбрус на рассвете">
-          <div class="element__info">
-            <h3 class="element__name">Гора Эльбрус</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img class="element__photo" src="./images/dombai.jpg" alt="Лес на фоне гор">
-          <div class="element__info">
-            <h3 class="element__name">Домбай</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img class="element__photo" src="./images/elbrus.jpg" alt="Эльбрус на рассвете">
-          <div class="element__info">
-            <h3 class="element__name">Гора Эльбрус</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img class="element__photo" src="./images/dombai.jpg" alt="Лес на фоне гор">
-          <div class="element__info">
-            <h3 class="element__name">Домбай</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </li>
-        <li class="element">
-          <img class="element__photo" src="./images/karachaevsk.jpg" alt="Строение на фоне гор">
-          <div class="element__info">
-            <h3 class="element__name">Карачаево-Черкессия</h3>
-            <button type="button" class="element__like"></button>
-          </div>
-        </li>
       </ul>
     </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&copy;2022 Mesto Russia</p>
   </footer>
+  <template class="element__template">
+    <li class="element">
+      <img class="element__photo" src="" alt="">
+      <button type="button" class="element__delete">
+        <img src="./images/cap.svg" class="element__trash-cap">
+      </button>
+      <div class="element__info">
+        <h3 class="element__name"></h3>
+        <button type="button" class="element__like"></button>
+      </div>
+    </li>
+  </template>
+  <script src="script.js"></script>
 </body>
 
 </html>
