--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             <img src="./images/close.svg" class="popup__close-icon" alt="Закрыть">
           </button>
           <h2 class="popup__title profile-edit__title">Редактировать профиль</h2>
-          <input type="text" class="profile-edit__name popup__item" name="name" placeholder="Жак-Ив Кусто" autocomplete="off">
-          <input type="text" class="profile-edit__about popup__item" name="about" placeholder="Исследователь океана" autocomplete="off">
+          <input type="text" class="profile-edit__name popup__item" name="name" placeholder="Жак-Ив Кусто"
+            autocomplete="off">
+          <input type="text" class="profile-edit__about popup__item" name="about" placeholder="Исследователь океана"
+            autocomplete="off">
           <button type="submit" class="popup__save profile-edit__save">Сохранить</button>
         </fieldset>
       </form>
@@ -52,7 +54,7 @@
         <button type="button" class="popup__close">
           <img src="./images/close.svg" class="popup__close-icon" alt="Закрыть">
         </button>
-        <img class="popup-image__image" src="">
+        <img class="popup-image__image" src="#" alt="">
         <figcaption class="popup-image__caption"></figcaption>
       </figure>
     </div>
@@ -74,10 +76,10 @@
         <img src="./images/plus.svg" alt="Плюс">
       </button>
     </section>
-    <section class="elements">
+    <div class="elements">
       <ul class="elements__list">
       </ul>
-    </section>
+    </div>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&copy;2022 Mesto Russia</p>
