--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
             <img src="./images/close.svg" class="popup__close-icon" alt="Закрыть">
           </button>
           <h2 class="popup__title profile-edit__title">Редактировать профиль</h2>
-          <input type="text" class="profile-edit__name popup__item" name="name" value="Жак-Ив Кусто"
-            autocomplete="off">
-          <input type="text" class="profile-edit__about popup__item" name="about" value="Исследователь океана"
-            autocomplete="off">
+          <input type="text" class="profile-edit__name popup__item" name="name" placeholder="Имя" autocomplete="off">
+          <input type="text" class="profile-edit__about popup__item" name="about" placeholder="О себе" autocomplete="off">
           <button type="submit" class="popup__save profile-edit__save">Сохранить</button>
         </fieldset>
       </form>
