--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,15 @@
   <main class="content">
     <section class="profile">
       <div class="profile__data">
-        <img class="profile__avatar" src="<%=require("./images/avatar.jpg")%>" alt="Аватар Жака Ив Кусто">
+        <button class="profile__avatar-button">
+          <img class="profile__avatar" src="#" alt="Аватар пользователя">
+        </button>
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <h1 class="profile__name"> </h1>
           <button type="button" class="profile__edit-button">
             <img src="<%=require("./images/pencil.svg")%>" alt="Карандаш">
           </button>
-          <p class="profile__about">Исследователь океана</p>
+          <p class="profile__about"></p>
         </div>
       </div>
       <button type="button" class="profile__add-button">
@@ -39,51 +41,77 @@
   </footer>
   <div class="popup popup-profile">
     <div class="popup__container">
+      <button type="button" class="popup__close">
+        <img src="<%=require("./images/close.svg")%>" class="popup__close-icon" alt="Закрыть">
+      </button>
+      <h2 class="popup__title profile-edit__title">Редактировать профиль</h2>
       <form class="popup__form profile-edit" name="profile-data" novalidate>
-        <button type="button" class="popup__close">
-          <img src="<%=require("./images/close.svg")%>" class="popup__close-icon" alt="Закрыть">
-        </button>
-        <h2 class="popup__title profile-edit__title">Редактировать профиль</h2>
         <input type="text" id="name-input" class="profile-edit__name popup__item" pattern="^[a-zA-Zа-яА-ЯЁё\s\-]+$"
             data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" minlength="2" maxlength="40" name="name" placeholder="Имя" autocomplete="off" required>
         <span class="popup__error name-input-error"></span>
         <input type="text" id="about-input" class="profile-edit__about popup__item" pattern="^[a-zA-Zа-яА-ЯЁё\s\-]+$"
             data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" minlength="2" maxlength="200" name="about" placeholder="О себе" autocomplete="off" required>
         <span class="popup__error about-input-error"></span>
-        <button type="submit" class="popup__save profile-edit__save">Сохранить</button>
+        <button type="submit" class="popup__button profile-edit__save" data-init="Сохранить" data-load="Сохранение...">Сохранить</button>
       </form>
     </div>
   </div>
 
   <div class="popup popup-element">
     <div class="popup__container">
+      <button type="button" class="popup__close">
+        <img src="<%=require("./images/close.svg")%>" class="popup__close-icon" alt="Закрыть">
+      </button>
+      <h2 class="popup__title profile-edit__title">Новое место</h2>
       <form class="popup__form card-add" name="element-data" novalidate>
-        <button type="button" class="popup__close">
-          <img src="<%=require("./images/close.svg")%>" class="popup__close-icon" alt="Закрыть">
-        </button>
-        <h2 class="popup__title profile-edit__title">Новое место</h2>
         <input type="text" id="place-input" class="popup__item card-add__name" pattern="^[a-zA-Zа-яА-ЯЁё\s\-]+$"
             data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" minlength="2" maxlength="30" name="name" placeholder="Название" required>
         <span class="popup__error place-input-error"></span>
         <input type="url" id="url-input" class="popup__item card-add__link" name="link"
             placeholder="Ссылка на картинку" required>
         <span class="popup__error url-input-error"></span>
-        <button type="submit" class="popup__save card-add__save">Создать</button>
+        <button type="submit" class="popup__button card-add__save" data-init="Создать" data-load="Создание...">Создать</button>
       </form>
     </div>
   </div>
 
   <div class="popup popup-image">
     <div class="popup-image__container">
+      <button type="button" class="popup__close">
+        <img src="<%=require("./images/close.svg")%>" class="popup__close-icon" alt="Закрыть">
+      </button>
       <figure class="popup-image__figure">
-        <button type="button" class="popup__close">
-          <img src="<%=require("./images/close.svg")%>" class="popup__close-icon" alt="Закрыть">
-        </button>
         <img class="popup-image__image" src="#" alt="">
         <figcaption class="popup-image__caption"></figcaption>
       </figure>
     </div>
   </div>
+
+  <div class="popup popup-delete">
+    <div class="popup__container">
+      <button type="button" class="popup__close">
+        <img src="<%=require("./images/close.svg")%>" class="popup__close-icon" alt="Закрыть">
+      </button>
+      <h2 class="popup__title">Вы уверены?</h2>
+      <button type="button" class="popup__button">Да</button>
+    </div>
+  </div>
+
+  <div class="popup popup-avatar">
+    <div class="popup__container">
+      <button type="button" class="popup__close">
+        <img src="<%=require("./images/close.svg")%>" class="popup__close-icon" alt="Закрыть">
+      </button>
+      <h2 class="popup__title">Обновить аватар</h2>
+      <form class="popup__form" name="avatar-link" novalidate>
+        <input type="url" id="ava-url-input" class="popup__item avatar__link" name="link" placeholder="Ссылка на картинку" required>
+        <span class="popup__error ava-url-input-error"></span>
+        <button type="submit" class="popup__button" data-init="Создать" data-load="Создание...">Создать</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="page_loading"></div>
 
   <template class="element__template">
     <li class="element">
@@ -94,6 +122,7 @@
       <div class="element__info">
         <h3 class="element__name"></h3>
         <button type="button" class="element__like"></button>
+        <span class="element__likes-number"></span>
       </div>
     </li>
   </template>
