--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
         <img src="<%=require("./images/close.svg")%>" class="popup__close-icon" alt="Закрыть">
       </button>
       <h2 class="popup__title">Вы уверены?</h2>
-      <button type="button" class="popup__button">Да</button>
+      <button type="submit" class="popup__button">Да</button>
     </div>
   </div>
 
