--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,10 @@
     </div>
   </main>
   <footer class="footer">
-    <p class="footer__copyright">&copy;2022 Mesto Russia</p>
+    <p class="footer__copyright">&copy;2023 Mesto Russia</p>
   </footer>
+
+  <!-- Модальное окно - Редактировать профиль -->
   <div class="popup popup-profile">
     <div class="popup__container">
       <button type="button" class="popup__close">
@@ -57,6 +59,7 @@
     </div>
   </div>
 
+  <!-- Модальное окно - Новое место -->
   <div class="popup popup-element">
     <div class="popup__container">
       <button type="button" class="popup__close">
@@ -75,6 +78,7 @@
     </div>
   </div>
 
+  <!-- Модальное окно - Открытие попапа с картинкой -->
   <div class="popup popup-image">
     <div class="popup-image__container">
       <button type="button" class="popup__close">
@@ -87,6 +91,7 @@
     </div>
   </div>
 
+  <!-- Модальное окно - Вы уверены? -->
   <div class="popup popup-delete">
     <div class="popup__container">
       <button type="button" class="popup__close">
@@ -97,6 +102,7 @@
     </div>
   </div>
 
+  <!-- Модальное окно - Обновить аватар -->
   <div class="popup popup-avatar">
     <div class="popup__container">
       <button type="button" class="popup__close">
