Ready for first review

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,10 @@
   <main class="content">
     <section class="profile">
       <div class="profile__data">
-        <button class="profile__avatar-button">
+        <div class="profile__avatar-box">
           <img class="profile__avatar" src="#" alt="Аватар пользователя">
-        </button>
+          <button class="profile__avatar-button" type="button"></button>
+        </div>
         <div class="profile__info">
           <h1 class="profile__name"> </h1>
           <button type="button" class="profile__edit-button">
