--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
         <input type="url" id="url-input" class="popup__item card-add__link" name="link"
             placeholder="Ссылка на картинку" required>
         <span class="popup__error url-input-error"></span>
-        <button type="submit" class="popup__button card-add__save" data-init="Создать" data-load="Создание..." disabled>Создать</button>
+        <button type="submit" class="popup__button card-add__save" data-init="Создать" data-load="Создание...">Создать</button>
       </form>
     </div>
   </div>
@@ -113,7 +113,7 @@
       <form class="popup__form" name="avatar-link" novalidate>
         <input type="url" id="ava-url-input" class="popup__item avatar__link" name="link" placeholder="Ссылка на картинку" required>
         <span class="popup__error ava-url-input-error"></span>
-        <button type="submit" class="popup__button" data-init="Создать" data-load="Создание..." disabled>Создать</button>
+        <button type="submit" class="popup__button" data-init="Создать" data-load="Создание...">Создать</button>
       </form>
     </div>
   </div>
