--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,6 @@
     <p class="footer__copyright">&copy;2023 Mesto Russia</p>
   </footer>
 
-  <!-- Модальное окно - Редактировать профиль -->
   <div class="popup popup-profile">
     <div class="popup__container">
       <button type="button" class="popup__close">
@@ -60,7 +59,6 @@
     </div>
   </div>
 
-  <!-- Модальное окно - Новое место -->
   <div class="popup popup-element">
     <div class="popup__container">
       <button type="button" class="popup__close">
@@ -79,7 +77,6 @@
     </div>
   </div>
 
-  <!-- Модальное окно - Открытие попапа с картинкой -->
   <div class="popup popup-image">
     <div class="popup-image__container">
       <button type="button" class="popup__close">
@@ -87,12 +84,14 @@
       </button>
       <figure class="popup-image__figure">
         <img class="popup-image__image" src="#" alt="">
-        <figcaption class="popup-image__caption"></figcaption>
+        <figcaption class="popup-image__caption">
+          <p class="popup-image__name"></p>
+          <p class="popup-image__owner"></p>
+        </figcaption>
       </figure>
     </div>
   </div>
 
-  <!-- Модальное окно - Вы уверены? -->
   <div class="popup popup-delete">
     <div class="popup__container">
       <button type="button" class="popup__close">
@@ -103,7 +102,6 @@
     </div>
   </div>
 
-  <!-- Модальное окно - Обновить аватар -->
   <div class="popup popup-avatar">
     <div class="popup__container">
       <button type="button" class="popup__close">
